# c2-phantom

./: .dockerignore  .env.example  .gitignore  ABSOLUTE-CINEMA-REPORT.md  API.md  ARCHITECTURE.md  BUILD-ALL.ps1  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  D-DRIVE-SETUP.md  Dockerfile  FEATURES.md  HYBRID-BUILD.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  OPSEC-COMPLETE.md  PROFESSIONAL-GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-OLD.md  README.md  README_PROFESSIONAL.md  REAL-C2-GUIDE.md  SECURITY.md  START-SERVER.ps1  TESTING-REAL-C2.md  TESTING.md  USAGE-GUIDE.md  WALKTHROUGH.md  activate.ps1  docker-compose.prod.yml  docker-compose.yml  init.sql  install.py  phantom.py  (+6 more)
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: commands.rs  credentials.rs  files.rs  keylog.rs  main.rs  persist.rs  screen.rs  tests.rs
c2_phantom/: __init__.py  agent.py  cli.py  orchestrator.py
c2_phantom/core/: __init__.py  antiforensics.py  c_integration.py  config.py  events.py  exceptions.py  persistence.py  session.py
c2_phantom/crypto/: __init__.py  encryption.py  keys.py
c2_phantom/evasion/: __init__.py  fragmentation.py  modern.py  timing.py
c2_phantom/network/: __init__.py  anonymity.py  client.py  dns.py  http.py  proxy.py  secure_channel.py  server.py  websocket.py
c2_phantom/persistence/: __init__.py  scheduler.py
c2_phantom/plugins/: __init__.py  base.py  example_plugin.py  loader.py
c2_phantom/utils/: __init__.py  ui.py
core/anti/: sandbox.c  sandbox.h
core/crypto/: aes.c  aes.h
core/evasion/: amsi.c  amsi.h  etw.c  etw.h
core/hooks/: inline.c  inline.h
core/network/: beacon.c  beacon.h
core/process/: inject.c  inject.h
core/syscall/: direct.c  direct.h
examples/: usage_example.py
proto/: c2.proto  generate.sh
server/: Dockerfile  go.mod  go.sum  main.go  main_test.go
tests/: __init__.py  conftest.py  test_encryption.py  test_network.py  test_plugins.py  test_python.py  test_server.go
