[package]
name = "c2-agent"
version = "1.0.0"
edition = "2021"
authors = ["C2-Phantom Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt", "net", "time", "macros"], default-features = false }

# Crypto (pure Rust, no OpenSSL)
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# HTTP client (minimal)
tiny_http = { version = "0.12", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for smaller binary
panic = "abort"        # Abort on panic (smaller binary)
strip = true           # Strip symbols

[profile.release.package."*"]
opt-level = "z"

[[bin]]
name = "c2-agent"
path = "src/main.rs"

[features]
default = []
http = ["tiny_http"]
